unpackaged/main/default/objects/CLT_Picklist__mdt/CLT_Picklist__mdt.object-meta.xml
<CustomObject>
    <label>CLT Picklist</label>
    <pluralLabel>CLT Picklists</pluralLabel>
</CustomObject>