unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_active__c.field-meta.xml
<CustomField>
    <fullName>giv_active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>