unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_ControllingFieldName__c.field-meta.xml
<CustomField>
    <fullName>giv_ControllingFieldName__c</fullName>
    <label>ControllingFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>