unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_Exclude_Fields__c.field-meta.xml
<CustomField>
    <fullName>giv_Exclude_Fields__c</fullName>
    <label>Exclude Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>