unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_FieldName__c.field-meta.xml
<CustomField>
    <fullName>giv_FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>