unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>giv_ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>