unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_Take_All_Object_List__c.field-meta.xml
<CustomField>
    <fullName>giv_Take_All_Object_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take All Object List</label>
    <type>Checkbox</type>
</CustomField>