unpackaged/main/default/objects/CLT_Picklist__mdt/fields/giv_Values__c.field-meta.xml
<CustomField>
    <fullName>giv_Values__c</fullName>
    <label>Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>