unpackaged/main/default/objects/CLT_Picklist__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>giv_FieldName__c</columns>
    <columns>giv_ObjectName__c</columns>
    <columns>giv_active__c</columns>
    <columns>giv_Take_All_Object_List__c</columns>
    <columns>giv_Exclude_Fields__c</columns>
    <columns>giv_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>